<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_for_courses"
        android:id="@+id/et_search_for_courses"></EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/school_courses"
        android:id="@+id/btn_school_courses"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrance_exam"
        android:id="@+id/btn_entrance_exam"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/professional_couses"
        android:id="@+id/btn_professional_courses"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skill_courses"
        android:id="@+id/btn_skill_courses"></Button>

</LinearLayout>